# fastapi-crud

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: db.py  main.py  tasks.py
app/api/: crud.py  models.py  notes.py  tasks.py
src/: requirements.txt
src/app/: db.py  main.py
src/app/api/: crud.py  models.py  notes.py
src/tests/: test_notes.py
tests/: conftest.py  test_fib.py  test_notes.py  test_ping.py
