[tool.poetry]
name = "fastapi-crud-async"
version = "0.1.0"
description = ""
authors = ["yxtay <wyextay@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.27.0"
databases = { version = "^0.6.2", extras = ["postgresql"] }
fastapi = "^0.88.0"
flower = "^1.2.0"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^1.4.41"
redis = "^4.3.4"
uvicorn = "^0.20.0"
pytest-mock = "^3.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode importlib --strict-markers"
asyncio_mode = "auto"
pythonpath = [""]
